==> KenKenMkIISR/test_ntsc_machikania/music.c <==
#include <string.h>
#include "pico/stdlib.h"
#include "hardware/pwm.h"
#include "./compiler.h"
#include "./api.h"
#include "./core1.h"
#include "./config.h"
#include "./sleep.h"
#define toneFlat(x) ((((unsigned long)(x))*69433)>>16)
#define toneSharp(x) ((((unsigned long)(x))*1933)>>11)
#define WAVE_BUFFER_SIZE 1024
#define SOUND_MODE_NONE 0
#define SOUND_MODE_MUSIC 1
#define SOUND_MODE_WAVE 2

void musicint(void){
	// This function is called every 1/60 sec.
	unsigned int i,j;
	switch(g_sound_mode){
		case SOUND_MODE_MUSIC:
			if (g_soundstart!=g_soundend){
				i=g_sound[g_soundstart];
				if (i<0xffff) {
					if (i!=g_pwm_wrap) {
						g_pwm_wrap=i;
						pwm_set_enabled(AUDIO_SLICE, false);
						pwm_set_wrap(AUDIO_SLICE, i-1);
						pwm_set_chan_level(AUDIO_SLICE, AUDIO_CHAN, i/2);
						pwm_set_counter(AUDIO_SLICE, 0);
					}
					pwm_set_enabled(AUDIO_SLICE, true);
				} else {
					pwm_set_enabled(AUDIO_SLICE, false);
				}
				if ((--g_soundwait)<=0) {
					g_soundstart++;
					if (g_soundstart==g_soundend || 31<g_soundstart) {
						g_soundstart=0;
						g_soundrepeat--;
						if (0<g_soundrepeat) {
							g_soundwait=g_soundlen[g_soundstart];
						} else {
							g_soundend=g_soundrepeat=g_soundwait=0;
						}
					} else {
						g_soundwait=g_soundlen[g_soundstart];
					}
				}
				// Shift music data even though without output.
				if (g_musicstart!=g_musicend) {
					if ((--g_musicwait)<=0) {
						g_musicstart++;
						g_musicstart&=31;
						g_musicwait=g_musiclen[g_musicstart];
					}
				}
			} else  if (g_musicstart!=g_musicend) {
				i=g_music[g_musicstart];
				if (i<0xffff) {
					if (i!=g_pwm_wrap) {
						g_pwm_wrap=i;
						pwm_set_enabled(AUDIO_SLICE, false);
						pwm_set_wrap(AUDIO_SLICE, i-1);
						pwm_set_chan_level(AUDIO_SLICE, AUDIO_CHAN, i/2);
						pwm_set_counter(AUDIO_SLICE, 0);
					}
					pwm_set_enabled(AUDIO_SLICE, true);
				} else {
					pwm_set_enabled(AUDIO_SLICE, false);
				}
				if ((--g_musicwait)<=0) {
					g_musicstart++;
					g_musicstart&=31;
					g_musicwait=g_musiclen[g_musicstart];
					if (((g_musicstart+1)&31)==g_musicend) {
						// Raise MUSIC interrupt flag
						raise_interrupt_flag(INTERRUPT_MUSIC);
					}
				}
			} else {
				pwm_set_enabled(AUDIO_SLICE, false);
			}
			break;
		case SOUND_MODE_WAVE:
			if (g_wave_writepos==g_wave_readpos) {
				g_sound_mode=SOUND_MODE_NONE;
				g_wave_enable=0;
				raise_interrupt_flag(INTERRUPT_WAVE);
			}
			break;
		default:
			break;
	}
}

void stop_music(void){
	// Initializations for music/sound/wave.
	g_musicstart=g_musicend=g_musicwait=g_soundstart=g_soundend=g_soundwait=g_soundrepeat=0;
	g_sound_mode=SOUND_MODE_NONE;
	g_wave_writepos=g_wave_readpos=0;
	g_pwm_wrap=0;
	
	// Cancel interrupt
	cancel_repeating_timer(&g_wave_timer);

	// Allocate GPIO to the PWM
	gpio_set_function(AUDIO_PORT, GPIO_FUNC_PWM);
	// Set clock divier for fastest frequency
	pwm_set_clkdiv(AUDIO_SLICE, 174.75);
	// 2048 cycles PWM (an example for 440 Hz)
	pwm_set_wrap(AUDIO_SLICE, 2047);
	// Set duty to 50%
	pwm_set_chan_level(AUDIO_SLICE, AUDIO_CHAN, 1024);
	// Disable
	pwm_set_enabled(AUDIO_SLICE, false);
	// Reset counter
	pwm_set_counter(AUDIO_SLICE, 0);
	// Close WAVE file
	if (g_fhandle) f_close(g_fhandle);
	g_fhandle=0;
	if (g_wavtable) delete_memory(g_wavtable);
	g_wavtable=0;
	g_wave_enable=0;
}
