==> machikania/protozoea/music.c <==
#include <xc.h>
#include "compiler.h"
#include "api.h"
#define toneFlat(x) ((((unsigned long)(x))*69433)>>16)
#define toneSharp(x) ((((unsigned long)(x))*1933)>>11)
#define SOUND_MODE_MUSIC 1
#define SOUND_MODE_WAVE 2
#define start_dma() T4CONSET=0x8000; DCH2CONSET=0x00000080; g_sound_mode=SOUND_MODE_WAVE
#define stop_dma()  T4CONCLR=0x8000; DCH2CONCLR=0x00000080; g_sound_mode=SOUND_MODE_MUSIC

void musicint(){
	unsigned int i;
	static unsigned short wavtable_pos;
	// This function is called every 1/60 sec.
	switch(g_sound_mode){
		case SOUND_MODE_MUSIC:
			if (g_soundstart!=g_soundend){
				// Start timer & OC4
				i=g_sound[g_soundstart];
				if (i<0xffff) {
					T3CONSET=0x8000;
					PR3=i;
					if (i<TMR3) TMR3=0;
				} else {
					T3CONCLR=0x8000;
				}
				if ((--g_soundwait)<=0) {
					g_soundstart++;
					if (g_soundstart==g_soundend || 31<g_soundstart) {
						g_soundstart=0;
						g_soundrepeat--;
						if (0<g_soundrepeat) {
							g_soundwait=g_soundlen[g_soundstart];
						} else {
							g_soundend=g_soundrepeat=g_soundwait=0;
						}
					} else {
						g_soundwait=g_soundlen[g_soundstart];
					}
				}
				// Shift music data even though without output.
				if (g_musicstart!=g_musicend) {
					if ((--g_musicwait)<=0) {
						g_musicstart++;
						g_musicstart&=31;
						g_musicwait=g_musiclen[g_musicstart];
					}
				}
			} else if (g_musicstart!=g_musicend) {
				// Start timer & OC4
				i=g_music[g_musicstart];
				if (i<0xffff) {
					T3CONSET=0x8000;
					PR3=i;
					if (i<TMR3) TMR3=0;
				} else {
					T3CONCLR=0x8000;
				}
				if ((--g_musicwait)<=0) {
					g_musicstart++;
					g_musicstart&=31;
					g_musicwait=g_musiclen[g_musicstart];
					if (((g_musicstart+1)&31)==g_musicend) {
						// Raise MUSIC interrupt flag
						raise_interrupt_flag(INTERRUPT_MUSIC);
					}
				}
			} else {
				// Stop timer
				T3CONCLR=0x8000;
			}
			break;
		case SOUND_MODE_WAVE:
			// Initialize parameters
			if (!T4CONbits.ON){
				start_dma();
				wavtable_pos=0;
			}
			wavtable_pos=262-wavtable_pos;
			// Read from file
			if (0 == FSfread((void*)&g_wavtable[wavtable_pos],1,262,g_fhandle)) {
				// End of file.
				stop_dma();
				FSfclose(g_fhandle);
				g_fhandle=0;
				g_sound_mode=SOUND_MODE_MUSIC;
				stop_music();
				// Raise WAVE interrupt flag
				raise_interrupt_flag(INTERRUPT_WAVE);
				break;
			}
			break;
		default:
			break;
	}
}

void stop_music(){
	// Initialize normal music mode.

	// Use Timer3 and OC4 for sound.
	RPA2R=5;         //Use RPA2 for OC4
	OC4R=0;
	OC4CON=0x000b;   // Timer3, toggle mode
	OC4CONSET=0x8000;// Start OC4
	T3CON=0x0050;    // Prescaller: 1:32 (1.5 MHz), not yet started

	// Initializations for music/sound.
	g_musicstart=g_musicend=g_musicwait=g_soundstart=g_soundend=g_soundwait=g_soundrepeat=0;
	g_sound_mode=SOUND_MODE_MUSIC;

	// Initialize DMA (see also init_dma_music())

	// Stop Timer4
	T4CON=0x0000; // Not start yet

	// Enable DMA, stop DMA2
	DMACONSET=0x8000;
	DCH2CONCLR=0x0080;

	// Close handle if open.
	if (g_fhandle) FSfclose(g_fhandle);
	g_fhandle=0;

	// Inactive music first
	g_music_active=0;
}
